--- a/Module2/Yoga-Studio-HTML-CSS/styles/styles.css
+++ b/Module2/Yoga-Studio-HTML-CSS/styles/styles.css
@@ -1,14 +1,6 @@
-.container, .container-fluid {
-  /* background-color: bisque; */
+/*.container, .container-fluid {
+  /* background-color: bisque; 
 }
-
-/* .row {
-  background-color: burlywood;
-}
-
-.col {
-  background-color: rgb(220, 220, 220);
-} */
 
 /* Reset */
 * {
