--- a/ClassPractice_Bootstrap2/Bootstrap/3_Bootstrap_Container/style.css
+++ b/ClassPractice_Bootstrap2/Bootstrap/3_Bootstrap_Container/style.css
@@ -15,14 +15,8 @@ h1 {
   color:black
 }
 
-.GreenBgColor {
-  background-color: green;
-}
-
-.RedBgColor {
-  background-color: red;
-}
-
 .container {
-background-color: aqua;
+  background-color: aqua;
+  max-width: 100%;
+
 }
