Update bootstrap exercise

--- a/ClassPractice_Bootstrap2/CSS/4_onePragraphWithOnebgClass/style.css
+++ b/ClassPractice_Bootstrap2/CSS/4_onePragraphWithOnebgClass/style.css
@@ -7,12 +7,16 @@ main {
 }
 
 p {
-  background-color: blue;
+  font-size: 12px;
   color:aliceblue
 }
 
 h1 {
   color:black
+}
+
+div {
+  background-color: red;
 }
 
 .GreenBgColor {
