--- a/ClassPractice_Bootstrap2/CSS/7_twoPragraphWithOverridebgClass/style.css
+++ b/ClassPractice_Bootstrap2/CSS/7_twoPragraphWithOverridebgClass/style.css
@@ -22,3 +22,9 @@ h1 {
 .RedBgColor {
   background-color: red;
 }
+
+.textDescription {
+  font-size: 12px;
+  color:blueviolet;
+  text-decoration: line-through;
+}
