--- a/ClassPractice_Bootstrap2/CSS/2_main/style.css
+++ b/ClassPractice_Bootstrap2/CSS/2_main/style.css
@@ -4,9 +4,13 @@ body {
 }
 
 main {
-  background-color: burlywood;
+  background-color: aquamarine;
 }
 
 h1 {
-  color:rgb(243, 12, 12)
+  color:blue
 }
+
+div {
+  background-color: red;
+} 
