--- a/ClassPractice_Bootstrap2/CSS/8_twoPragraphWithTwobgClassAddNewTextClass/style.css
+++ b/ClassPractice_Bootstrap2/CSS/8_twoPragraphWithTwobgClassAddNewTextClass/style.css
@@ -23,6 +23,7 @@ h1 {
   background-color: red;
 }
 
-/* .TextStyle {
-text-decoration: line-through;
-} */
+.TextStyle {
+  font-size: 14px;
+  text-decoration: underline;
+}
